# test-wayland-10bit

./: CMakeLists.txt  KisOpenGLModeProber.cpp  KisOpenGLModeProber.h  README.md  config-hdr.h  kis_assert.cpp  kis_assert.h  kis_debug.cpp  kis_debug.h  kis_opengl.cpp  kis_opengl.h  main.cpp
